# loan-document-processing

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  pyproject.toml
src/backend/: __init__.py
src/backend/classifier/: __init__.py  document_classifier.py
src/backend/commons/: __init__.py  llm_factory.py  storage.py
src/backend/dashboard/: __init__.py  dashboard.py
src/backend/extraction/: __init__.py  data_document_extraction.py
src/backend/facade/: __init__.py  facade_loan.py
src/backend/learning_loop/: __init__.py  learning.py
src/backend/prompts/: __init__.py  base.py  classifier_prompt.py  extraction_prompt.py  load_prompts.py  prompt_classifier.yaml  prompt_data_extract.yaml
src/ui/: main.py  styles.css  styles.py
src/ui/pages/: 1_Document_View.py  2_Dashboard.py  3_Settings.py
